--- a/hyprland.conf
+++ b/hyprland.conf
@@ -26,10 +26,12 @@ decoration {
         ignore_opacity = true
     }
 
-    drop_shadow = true
-    shadow_range = 15
-    shadow_render_power = 3
-    col.shadow = rgba(00000044)
+    shadow {
+        enabled = true
+        range = 15
+        render_power = 3
+        color = rgba(00000044)
+    }
     
     active_opacity = 0.95
     inactive_opacity = 0.85
