Refactor reglas de capa y estilos en hyprland.conf y walker.css para mejorar la apariencia y funcionalidad del tema Liquid Crystal.

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -34,8 +34,14 @@ decoration {
     }
     
     active_opacity = 0.95
-    inactive_opacity = 0.85
+    active_opacity = 0.95
 }
+
+# Layer Rules for Blur
+layerrule = blur, waybar
+layerrule = blur, walker
+layerrule = ignorezero, waybar
+layerrule = ignorezero, walker
 
 # Animations (Fluid and bouncy like liquid)
 animations {
