Rebrand: Rename theme to Liquid Bl4ck

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -1,4 +1,4 @@
-# Liquid Crystal Theme for Omarchy (Hyprland)
+# Liquid Bl4ck Theme for Omarchy (Hyprland)
 # Inspired by Apple's Liquid Crystal aesthetic
 
 # Monitor config (adjust as needed)
